--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  /* color: rgb(51, 51, 51); */
+  /* background-color: #f5f8f9; */
 }
 
 a:hover {
@@ -355,15 +358,19 @@ a:hover {
   margin: 20px auto 30px auto;
   width: 250px;
 }
-.crypto-card-container {
+.card-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  /* margin: 10px; */
+  padding: 15px;
   min-height: 65vh !important;
 }
 .crypto-card {
   min-width: 250px;
 }
-.crypto-card .crypto-image {
-  width: 35px;
-}
+
 .select-timeperiod {
   width: 200px !important;
   margin-top: 20px !important;
