--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ a:hover {
 
 .navbar {
   flex: 0.2;
-  background-color: rgb(0, 21, 41);
+  background-color: #001529;
 }
 
 .main {
@@ -367,6 +367,15 @@ a:hover {
   padding: 15px;
   min-height: 65vh !important;
 }
+
+.news-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  /* margin: 10px; */
+  padding: 15px;
+}
+
 .crypto-card {
   min-width: 250px;
 }
