--- a/src/style.css
+++ b/src/style.css
@@ -137,7 +137,7 @@ a:hover {
 }
 
 .coin-detail-container {
-  margin: 30px 15%;
+  margin: 30px 0px;
   width: 100%;
 }
 
@@ -167,7 +167,7 @@ a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 40px;
+  padding: 0px 60px;
 }
 
 .stats-container h2 {
